로그인오류, search예외상황 추가

--- a/samm/src/main/resources/templates/users/mypage.html
+++ b/samm/src/main/resources/templates/users/mypage.html
@@ -169,7 +169,7 @@
 									<td th:text="${board.title}">John</td>
 									<td th:text="${board.view_cnt}">Doe</td>
 									<td th:text="${board.comment_cnt}">john@example.com</td>
-									<td th:text="${#dates.format(board.regdate,'yyyy-MM-dd')}">john@example.com</td>
+									<td th:text="${#dates.format(board.reg_date,'yyyy-MM-dd')}">john@example.com</td>
 								</tr>
 							</tbody>
 						</table>
