--- a/samm/src/main/resources/templates/festival/searchfestival.html
+++ b/samm/src/main/resources/templates/festival/searchfestival.html
@@ -85,10 +85,10 @@
 														<div class="icon">
 															<span class="fa fa-calendar"></span>
 														</div>
-														<input th:if="${start} != null" type="text"
+														<input th:if="${start} != null" type="text" id="startdate"
 															class="form-control checkin_date" name="startdate"
 															th:placeholder="${#temporals.createDate(start,'yyyyMMdd')}"
-															readonly="readonly"> <input
+															readonly="readonly"> <input id="startdate"
 															th:unless="${start} != null" type="text"
 															class="form-control checkin_date" name="startdate"
 															placeholder="Choose Start Date" readonly="readonly">
@@ -102,10 +102,10 @@
 														<div class="icon">
 															<span class="fa fa-calendar"></span>
 														</div>
-														<input th:if="${end} != null" type="text"
+														<input th:if="${end} != null" type="text" id="enddate"
 															class="form-control checkin_date" name="enddate"
 															th:placeholder="${#temporals.createDate(end,'yyyyMMdd')}"
-															readonly="readonly"> <input
+															readonly="readonly"> <input id="enddate"
 															th:unless="${end} != null" type="text"
 															class="form-control checkin_date" name="enddate"
 															placeholder="Choose End Date" readonly="readonly">
