--- a/samm/src/main/resources/static/css/map.css
+++ b/samm/src/main/resources/static/css/map.css
@@ -39,6 +39,17 @@ body {
 	position: relative;
 }
 
+.project-wrap.map-overlay:after {
+	content: "";
+	position: absolute;
+	left: 116px;
+	bottom: -19px;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	border-top: 20px solid white;
+	z-index: 4;
+}
+
 .project-wrap.map-overlay .img {
 	width: 270px;
 	height: 0;
@@ -47,13 +58,13 @@ body {
 
 .project-wrap.map-overlay .p-4 {
 	width: 270px;
-	padding: 40px 1rem 1rem 1rem !important;
+	padding: 40px 1rem 0.5rem 1rem !important;
 	overflow: hidden;
 	margin-top: 40px;
 }
 
 .project-wrap.map-overlay .img .price {
-	z-index: 3;
+	z-index: 5;
 }
 
 .project-wrap.map-overlay .text .days {
@@ -70,6 +81,7 @@ body {
 	font-size: 23px;
 	margin-bottom: 0;
 	z-index: 3;
+	animation: leftright 3s infinite alternate ease-in-out;
 }
 
 .project-wrap.map-overlay .text span {
@@ -134,4 +146,19 @@ body {
 .project-wrap.map-overlay .share {
 	width: 25px;
 	height: 25px;
+}
+
+@keyframes leftright {
+
+	0%,
+	20% {
+		transform: translateX(0%);
+		left: 0%;
+	}
+
+	80%,
+	100% {
+		transform: translateX(-120%);
+		left: 120%;
+	}
 }
