--- a/samm/src/main/resources/templates/board.html
+++ b/samm/src/main/resources/templates/board.html
@@ -5,6 +5,19 @@ function goDetail(bno){
 	location.href='/board/detail?bno='+bno; 
 };
 
+function Write(){
+	$('#writeBtn').click(function() {
+
+		if ($('#loginuser').val() == null || $('#loginuser').val() == "") {
+			alert("login후 이용 가능합니다.")
+		
+		}
+		else{
+			location.href='/board/write'
+		}
+	})
+}
+
 
 </script>
 
@@ -16,58 +29,66 @@ function goDetail(bno){
 .contents-box {
 	word-break: break-all;
 }
+
 .search-container {
-      background-color: rgb(253, 253, 250);
-      width: 100%;
-      height: 110px;
-      border: 1px solid #ddd;
-      margin-top : 10px;
-      margin-bottom: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .search-form {
-      height: 37px;
-      display: flex;
-    }
-    .search-option {
-      width: 100px;
-      height: 100%;
-      outline: none;
-      margin-right: 5px;
-      border: 1px solid #ccc;
-      color: gray;
-    }
-    .search-option > option {
-      text-align: center;
-    }
-    .search-input {
-      color: gray;
-      background-color: white;
-      border: 1px solid #ccc;
-      height: 100%;
-      width: 300px;
-      font-size: 15px;
-      padding: 5px 7px;
-    }
-    .search-input::placeholder {
-      color: gray;
-    }
-    .search-button {
-      /* 메뉴바의 검색 버튼 아이콘  */
-      width: 20%;
-      height: 100%;
-      background-color: rgb(22, 22, 22);
-      color: rgb(209, 209, 209);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 15px;
-    }
-    .search-button:hover {
-      color: rgb(165, 165, 165);
-    }
+	background-color: rgb(253, 253, 250);
+	width: 100%;
+	height: 110px;
+	border: 1px solid #ddd;
+	margin-top: 10px;
+	margin-bottom: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.search-form {
+	height: 37px;
+	display: flex;
+}
+
+.search-option {
+	width: 100px;
+	height: 100%;
+	outline: none;
+	margin-right: 5px;
+	border: 1px solid #ccc;
+	color: gray;
+}
+
+.search-option>option {
+	text-align: center;
+}
+
+.search-input {
+	color: gray;
+	background-color: white;
+	border: 1px solid #ccc;
+	height: 100%;
+	width: 300px;
+	font-size: 15px;
+	padding: 5px 7px;
+}
+
+.search-input::placeholder {
+	color: gray;
+}
+
+.search-button {
+	/* 메뉴바의 검색 버튼 아이콘  */
+	width: 20%;
+	height: 100%;
+	background-color: rgb(22, 22, 22);
+	color: rgb(209, 209, 209);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 15px;
+}
+
+.search-button:hover {
+	color: rgb(165, 165, 165);
+}
 </style>
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
@@ -99,18 +120,17 @@ function goDetail(bno){
 					<div class="text">
 						<div class="d-flex align-items-center mb-4 topp">
 							<div class="one">
-								<span class="day">11</span>
+								<span class="day" th:text="${b.bno}">11</span>
 							</div>
 							<div class="two">
-								<span class="yr">2020</span> <span class="mos">September</span>
+								<span class="mos" th:text="${b.reg_date}">September</span>
 							</div>
 						</div>
 						<div class="contents-box">
 							<h3 class="heading" th:text="${b.title}">
 								<a href="#">title</a>
 							</h3>
-							<P th:utext="${b.content}">content</P>
-							<p>
+							
 								<a th:onclick="'goDetail(' + ${b.bno} + ');'"
 									class="btn btn-primary">Read more</a>
 							</p>
@@ -120,48 +140,47 @@ function goDetail(bno){
 			</div>
 		</div>
 	</div>
-	<div class="search-container">	
-      <form action="/board" class="search-form" method="get">
-        <select class="search-option" name="option">
-          <option value="A" ${ph.sc.option=='A' || ph.sc.option=='' ? "selected" : ""}>제목+내용</option>
-          <option value="T" ${ph.sc.option=='T' ? "selected" : ""}>제목만</option>
-          <option value="W" ${ph.sc.option=='W' ? "selected" : ""}>작성자</option>
-        </select>
+	<div class="search-container">
+		<form action="/board" class="search-form" method="get">
+			<select class="search-option" name="option">
+				<option value="A" ${ph.sc.option== 'A' || ph.sc.option=='' ? "selected" : ""}>제목+내용</option>
+				<option value="T" ${ph.sc.option=='T' ? "selected" : ""}>제목만</option>
+				<option value="W" ${ph.sc.option=='W' ? "selected" : ""}>작성자</option>
+			</select> <input type="text" name="keyword" class="search-input"
+				th:value="${ph.sc.keyword}" placeholder="검색어를 입력해주세요"> <input
+				type="submit" class="search-button" value="검색">
 
-        <input type="text" name="keyword" class="search-input" th:value="${ph.sc.keyword}" placeholder="검색어를 입력해주세요">
-        <input type="submit" class="search-button" value="검색">
-         
-      </form> 	
-     <button id="writeBtn" class="btn-write" onclick="location.href='/board/write'"><i class="fa fa-pencil"></i> 글쓰기</button>
-    
-    </div>
-	
-	
-	
-	
-	 <div>   
-	<!-- <button id="writeBtn" type="submit" class="btn btn-default">write</button> -->
+		</form>
+		<input th:if="${session.loginuser} != null"
+	th:value="${session.loginuser.id}" id="loginuser" hidden>
+		<button id="writeBtn" class="btn-write" onclick="Write()" >
+			<i class="fa fa-pencil"></i> 글쓰기
+		</button>
+
+	</div>
+
+
+
+
+	<div>
+		<!-- <button id="writeBtn" type="submit" class="btn btn-default">write</button> -->
 	</div>
 	<div class="row mt-5">
 		<div class="col text-center">
 			<div class="block-27 ">
 				<ul>
 					<li><a th:href="${ph.showPrev}">&lt;</a></li>
-						<span th:each="page:${#numbers.sequence(ph.beginPage,ph.endPage)}">
-						<li class="active">
-							<a th:text="${page}"  th:href="@{'/board'+${ph.sc.getQueryString(page)}} "></a>
-							
-							<!-- http://127.0.0.1/board$%7Bph.sc.getQueryString( -->
-						</li>
+					<span th:each="page:${#numbers.sequence(ph.beginPage,ph.endPage)}">
+						<li class="active"><a th:text="${page}"
+							th:href="@{'/board'+${ph.sc.getQueryString(page)}} "></a> <!-- http://127.0.0.1/board$%7Bph.sc.getQueryString( -->
+					</li>
 					</span>
 					<li><a href="#">&gt;</a></li>
 				</ul>
 			</div>
-			
-			<div>
-			
-			</div>
-		
+
+			<div></div>
+
 		</div>
 	</div>
 </section>
