--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -611,7 +611,12 @@
 	max-width: 790px;
 	margin: 0;
 	padding: 0;
-	overflow: scroll;
+	overflow-y: scroll;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+.s003 #map-searchlist::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
 }
 
 .s003 #map-searchlist.cal-open {
