--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -102,7 +102,7 @@
 						</svg>
 					</button>
 					<div id="map-keyword" class="keyword-empty ">
-						<input name="search" type="text" placeholder="Enter Keywords?" />
+						<input name="search" onkeyup="enterkey();" type="text" placeholder="Enter Keywords?" />
 						<input type="text" style="display:none;">
 					</div>
 					<button onclick="clearsearch();" id="map-clearbtn" style="display:none;" class="btn" type="button">
