--- a/samm/src/main/resources/templates/mng/main.html
+++ b/samm/src/main/resources/templates/mng/main.html
@@ -54,7 +54,8 @@
         </button>
  
         <ul class="navbar-nav navbar-nav-right">  
-          <li class="nav-item d-flex mr-4">
+          <li class="nav-item d-flex mr-4">	
+          	<span th:text="${session.loginadmin.name}"></span>
           	<a class="btn btn-info font-weight-bold" id="btnService" type="button" href="/">서비스 페이지로 돌아가기</a>
           </li>        
           <li class="nav-item dropdown d-flex mr-4 ">
@@ -64,10 +65,10 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
               <!-- <p class="mb-0 font-weight-normal float-left dropdown-header">Settings</p>  -->
-              <a class="dropdown-item preview-item" href="#">               
+              <a class="dropdown-item preview-item" href="@{ainfo(id=${session.loginadmin.id})}">               
                   <i class="icon-head"></i> Profile
               </a>
-              <a class="dropdown-item preview-item" href="#">
+              <a class="dropdown-item preview-item" href="/logout">
                   <i class="icon-inbox"></i> Logout
               </a>
             </div>
@@ -89,17 +90,33 @@
           <div class="user-name"> Edward Spencer </div>
      	  <div class="user-designation"> Developer </div> 
         </div>         
-    -->
+       -->
         
         <ul class="nav">
-          <li class="nav-item">
+  	<!--         <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="icon-sun menu-icon"></i>
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
- 
-             
+     -->
+          
+         
+         <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#fmenu" aria-expanded="false" aria-controls="fmenu">
+              <i class="icon-moon menu-icon"></i>
+              <span class="menu-title">Service Management</span>
+              <i class="menu-arrow"></i>
+            </a>
+            <div class="collapse" id="fmenu">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/mng/festival/festivalimg">Festival Photo</a></li>
+       		    <li class="nav-item"> <a class="nav-link" href="/mng/festival/boardlist">Board</a></li>     
+              </ul>
+            </div>
+         </li>  
+  
+          
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#amenu" aria-expanded="false" aria-controls="amenu">
               <i class="icon-moon menu-icon"></i>
