--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 					<li class="nav-item active"><a href="/about" class="nav-link">About</a></li>
-					<li class="nav-item active"><a href="/map" class="nav-link">Festival</a></li>
+					<li class="nav-item active"><a href="/map" class="nav-link">FestivalMap</a></li>
 					<li class="nav-item active"><a href="/board" class="nav-link">Board</a></li>
 					
 					<li class="nav-item active " th:if="${session.loginuser == null && session.loginadmin == null}">
@@ -99,7 +99,7 @@
 	</div>
 
 	<footer class="ftco-footer bg-bottom ftco-no-pt" id="footer--screen"
-		style="background-image: url(images/bg_3.jpg);">
+		style="background-image: url(/images/bg_3.jpg);">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md pt-5">
