--- a/samm/src/main/resources/templates/users/add.html
+++ b/samm/src/main/resources/templates/users/add.html
@@ -1,118 +1,71 @@
-
-<script>
-
-
-
-$(document).ready(function(){
-	
-	
-	$('#registerbtn').click(function(){
-		
-		if($('input[name="id"]').val()==""){
-			alert("아이디를 입력해주세요.");
-			$("#id").focus();
-			return false;
-		}
-		if($('input[name="pwd"]').val()==""){
-			alert("비밀번호를 입력해주세요.");
-			$("#name").focus();
-			return false;
-		}
-		if($('input[name="name"]').val()==""){
-			alert("성명을 입력해주세요.");
-			$("#name").focus();
-			return false;
-		}
-		
-		$('.user').attr({
-			'method' : 'post',
-		    'action' : '/users/addimpl'
-		});
-		$('.user').submit();
-	});
-	
-	$('input[name="id"]').keyup(function(){
-		var id = $(this).val();
-		
-		if(id.length < 4){
-			$("#idCheckDiv").removeClass("alert-success");
-			$("#idCheckDiv").addClass("alert-danger");
-			$("#idCheckDiv").text("4자 이상입력해주세요.");
-			return;
-		
-		}
-		if(id.length > 20){
-			$("#idCheckDiv").removeClass("alert-success");
-			$("#idCheckDiv").addClass("alert-danger");
-			$("#idCheckDiv").text("20자 이내로 입력해주세요.");
-			return;
-		}
-		
-	});
-	
-
-	
-});
-
-</script>
+<style>
+</style>
+<script src="/js/register.js"> </script>
 
 <meta charset="UTF-8">
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url('images/bg_1.jpg');">
+	style="background-image: url('/images/festival13.jpg');">
 	<div class="overlay"></div>
-
 	<div class="container">
-		<div class="col-lg-6">
-			<div class="p-5">
-				<div class="text-center">
-					
-				</div>
+		<div class="no-gutters slider-text js-fullheight loginpage">
+			<div class="login--form">
 				<form class="user">
-					<div class="form-group">
-						아이디: <span id="id"></span><input type="text"
-							class="form-control form-control-user" placeholder="ex)abc1234"
+					<div class="inputform" id="id-div">
+						<span id="id-span" class="registerText">*아이디를 입력해주세요.</span><input type="text"
+							class="registerInput" placeholder="ex) abc1234"
 							name="id">
-							<div class="alert alert-danger" id="idCheckDiv">4자 이상 20자 이내로 입력해주세요.</div>
+						<!-- <div class="alert alert-danger" id="idCheckDiv"></div> -->
 					</div>
 
-					<div class="form-group">
-						비밀번호: <input type="password"
-							class="form-control form-control-user" placeholder="ex)abc123!@"
-							name="pwd">
+					<div class="inputform hidden" id="pwd-div">
+						<span id="pwd-span" class="registerText">*비밀번호를 입력해주세요.</span><input
+							type="password" class="registerInput"
+							placeholder="ex) abc123!@" name="pwd">
+					</div>
+					
+					<div class="inputform hidden" id="vpwd-div">
+						<span id="vpwd-span" class="registerText">*비밀번호 확인</span><input
+							type="password" class="registerInput" name="vpwd"
+							placeholder="비밀번호를 다시 입력해주세요." >
 					</div>
 
-					<div class="form-group">
-						이름: <input type="text" class="form-control form-control-user"
-							placeholder="ex)홍길동" name="name">
+					<div class="inputform hidden" id="name-div">
+						<span id="name-span" class="registerText">*이름을 입력해주세요.</span><input type="text"
+							class=" registerInput" placeholder="ex) 홍길동"
+							name="name">
 					</div>
-					<div class="form-group">
-						e-mail: <input type="text" class="form-control form-control-user"
+					<div class="inputform hidden" id="email-div">
+						<span id="email-span" class="registerText">*이메일을 입력해주세요.</span><input type="text"
+							class="registerInput"
 							placeholder="ex)abc1234@naver.com" name="email">
 					</div>
-					<div class="form-group">
-						주소: <input type="text" class="form-control form-control-user"
-							placeholder="ex)부산시 사상구" name="address">
+					<div class="inputform hidden" id="addr-div">
+						<span id="addr-span" class="registerText">주소를 입력해주세요.</span><input type="text"
+							class="registerInput" placeholder="ex) 부산시 사상구"
+							name="address">
 					</div>
 
-					<div class="form-group">
-						전화번호: <input type="text" class="form-control form-control-user"
-							placeholder="ex)010-1234-1234" name="phone">
+					<div class="inputform hidden" id="phone-div">
+						<span id="phone-span" class="registerText">전화번호를 입력해주세요.</span><input type="text"
+							class="registerInput"
+							placeholder="ex) 010-1234-1234" name="phone">
 					</div>
-					<div class="form-group">
-						성별: <input type="text" class="form-control form-control-user"
-							placeholder="ex)남성,여성" name="gender">
+					<div class="inputform hidden" id="gender-div">
+						<span id="gender-span" class="registerText">성별 입력해주세요.</span> <select
+							class="registerInput" name="gender">
+							<option value="여성">여성</option>
+							<option value="남성">남성</option>
+						</select>
 					</div>
-
-
-					<a id="registerbtn" href="#"
-						class="btn btn-primary btn-user btn-block"> REGISTER </a>
-
 				</form>
-				<br>
+					<div id="btn--div">
+						<button id="nextbtn" href="#" class="inputbtn">NEXT</button>
+						<button id="prevbtn" href="#" class="inputbtn hidden">PREV</button>
+					</div>
+					<button id="registerbtn" href="#"
+						class="btn btn-primary btn-user btn-block" disabled> REGISTER </button>
 				
-
 			</div>
-			<div class="col-md-9 ftco-animate pb-5 text-center"></div>
 		</div>
 	</div>
 </section>
