--- a/samm/src/main/resources/templates/board/write.html
+++ b/samm/src/main/resources/templates/board/write.html
@@ -1,17 +1,12 @@
 <meta charset="utf-8">
-<link
-	href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-	rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <!-- include summernote css/js -->
 <link
-	href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
+	href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css"
 	rel="stylesheet">
 <script
-	src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
+-
 
 <script src="/js/summernote/summernote-lite.js"></script>
 <script src="/js/summernote/lang/summernote-ko-KR.js"></script>
@@ -27,7 +22,7 @@
 			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
 			<div class="col-md-9 ftco-animate pb-5 text-center">
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index.html">Home <i
+					<span class="mr-2"><a href="/">Home <i
 							class="fa fa-chevron-right"></i></a></span> <span>Board <i
 						class="fa fa-chevron-right"></i></span>
 				</p>
@@ -39,43 +34,78 @@
 
 
 <div class="container">
-<form id="post">
-	<div class="form-group">
-		제목: <span id="title"></span><input type="text"
-			class="form-control form-control-user" name="title">
-	<textarea id="summernote" name="content"></textarea>
-	<input th:if="${session.loginuser} != null"  name="writerid" th:value = "${session.loginuser.id}" hidden id="writerid">
-</div>
-</form>
-<a id="register" href="#" class="btn btn-primary btn-user btn-block">REGISTER</a>
+	<form id="post">
+		<div class="form-group">
+			제목: <span id="title"></span><input type="text"
+				class="form-control form-control-user" name="title">
+			<textarea id="summernote" name="content"></textarea>
+			<input th:if="${session.loginuser} != null" name="writerid"
+				th:value="${session.loginuser.id}" hidden id="writerid">
+		</div>
+	</form>
+	<a id="register" href="#" class="btn btn-primary btn-user btn-block"
+		onClick="boardRegister()">REGISTER</a>
 </div>
 <script>
-	$(document).ready(function() {
-	
-		$('#register').click(function(){
-			 if($('input[name="title"]').val()==""){
-				alert("제목 입력해주세요.");
-				$("#title").focus();
-				return false;
+	function uploadSummernoteImageFile(file, editor) {
+		data = new FormData();
+		data.append("file", file);
+		console.log(data);
+		console.log(file);
+		$.ajax({
+			data : data,
+			type : "post",
+			url : "/uploadSummernoteImageFile",
+			contentType : false,
+			enctype : 'multipart/form-data',
+			processData : false,
+			success : function(data) {
+				//항상 업로드된 파일의 url이 있어야 한다.
+				$('.note-editable').append('<img src='+data.url+' style="width:50%;" >' + '<p> </p>');
+				console.log("contents::"+$('textarea[name="content"]').val())
 			}
-			 if($('textarea[name="content"]').val()==""){
-					alert("내용 입력해주세요.");
-					$("#content").focus();
-					return false;
-				}
-
-			$('#post').attr({
-				'method' : 'post',
-			    'action' : '/board/writeimpl'
-			});
-			$('#post').submit(); 
 		});
-		
-	});
-	
-	//서머노트에 text 쓰기
-	$('#summernote').summernote('insertHtml');
+	};
 
+	function boardRegister() {
+		if ($('input[name="title"]').val() == "") {
+			alert("제목 입력해주세요.");
+			$("#title").focus();
+			return false;
+		}
+		if ($('textarea[name="content"]').val() == "") {
+			alert("내용 입력해주세요.");
+			$("#content").focus();
+			return false;
+		}
+
+		$('#post').attr({
+			'method' : 'post',
+			'action' : '/board/writeimpl'
+		});
+		$('#post').submit();
+	}
+	$('#summernote').summernote({
+		height : 300, // 에디터 높이
+		minHeight : null, // 최소 높이
+		maxHeight : null, // 최대 높이
+		focus : true, // 에디터 로딩후 포커스를 맞출지 여부
+		lang : "ko-KR", // 한글 설정
+		placeholder : '최대 2048자까지 쓸 수 있습니다', //placeholder 설정
+		callbacks : { //여기 부분이 이미지를 첨부하는 부분
+			onImageUpload : function(files) {
+				uploadSummernoteImageFile(files[0], this);
+				/* for (var i = files.length - 1; i >= 0; i--) {
+				uploadSummernoteImageFile(files[i],
+				this); 
+				}*/
+			}
+		}
+
+	});
+
+	//서머노트에 text 쓰기
+	//$('#summernote').summernote('insertText');
 	// 서머노트 쓰기 비활성화
 	//$('#summernote').summernote('disable');
 
@@ -89,51 +119,4 @@
 	//$('#summernote').summernote('undo');
 	// 앞으로가기
 	//$('#summernote').summernote('redo');
-	
-	
-	$('#summernote').summernote({
-		height: 300,                 // 에디터 높이
-		minHeight: null,             // 최소 높이
-		maxHeight: null,             // 최대 높이
-		focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
-		lang: "ko-KR",					// 한글 설정
-		placeholder: '최대 2048자까지 쓸 수 있습니다',	//placeholder 설정
-		callbacks: {	//여기 부분이 이미지를 첨부하는 부분
-			onImageUpload : function(files) {
-				uploadSummernoteImageFile(files[0],this);
-			},
-			onPaste: function (e) {
-				var clipboardData = e.originalEvent.clipboardData;
-				if (clipboardData && clipboardData.items && clipboardData.items.length) {
-					var item = clipboardData.items[0];
-					if (item.kind === 'file' && item.type.indexOf('image/') !== -1) {
-						e.preventDefault();
-					}
-				}
-			} 
-		}
-	});
-
-
-
-/**
-* 이미지 파일 업로드
-*/
-function uploadSummernoteImageFile(file, editor) {
-data = new FormData();
-data.append("file", file);
-console.log(data);
-console.log("image");
-$.ajax({
-	data : data,
-	type : "post",
-	url : "/uploadSummernoteImageFile",
-	contentType : false,
-	processData : false,
-	success : function(data) {
-    	//항상 업로드된 파일의 url이 있어야 한다.
-		$(editor).summernote('insertImage', data.url);
-	}
-});
-}
 </script>
